[package]
name = "go-to-the-future"
version = "0.1.0"
edition = "2024"
description = "A command-line tool to establish a temporal tunnel and transport you to the future."

[dependencies]
humantime = "2.3.0"
indicatif = "0.18.4"

[[bin]]
# Specify filename of binary artifact
name = "gtf"
path = "./src/main.rs"
